updated product service